--- a/index.html
+++ b/index.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
+</head>
 <body>
-<h1>Hello World!<h1>
+    <header>
+        <div class="container">
+            <div class="row">
+                <div class="column-sm-12"></div>
+            </div>
+            <div class="row">
+                <div class="column-sm-6"></div>
+                <div class="column-sm-6"></div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
