--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <header>
         <div class="container">
             <div class="row">
-                <div class="column-sm-12"></div>
+                <div class="column-sm-12">Hi</div>
             </div>
             <div class="row">
-                <div class="column-sm-6"></div>
-                <div class="column-sm-6"></div>
+                <div class="column-sm-6">This is</div>
+                <div class="column-sm-6">Kevin</div>
             </div>
         </div>
     </header>
