--- a/index.html
+++ b/index.html
@@ -6,15 +6,8 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <div class="row">
-                <div class="column-sm-12">Hi</div>
-            </div>
-            <div class="row">
-                <div class="column-sm-6">This is</div>
-                <div class="column-sm-6">Kevin</div>
-            </div>
-        </div>
+        <h1>Welcome!</h1>
+        <h1>This is Kevin's website.</h1>
     </header>
 </body>
 </html>
