--- a/index.html
+++ b/index.html
@@ -2,9 +2,25 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <!--<script src="Scripts/jquery-3.0.0.min.js"></script>
+    <script src="Scripts/popper.min.js"></script>-->
+    <script src="Scripts/bootstrap.min.js"></script>
 </head>
 <body>
+        <nav class="navbar navbar-expand-sm bg-light">
+                <ul class="navbar-nav">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link 1</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link 2</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link 3</a>
+                  </li>
+                </ul>
+              </nav>
     <header>
         <h1>Welcome!</h1>
         <h1>This is Kevin's website.</h1>
