--- a/index.html
+++ b/index.html
@@ -3,23 +3,27 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <!--<script src="Scripts/jquery-3.0.0.min.js"></script>
-    <script src="Scripts/popper.min.js"></script>-->
     <script src="Scripts/bootstrap.min.js"></script>
 </head>
 <body>
-        <nav class="navbar navbar-expand-sm bg-light">
-                <ul class="navbar-nav">
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link 1</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link 2</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Link 3</a>
-                  </li>
-                </ul>
+        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
+                <a class="navbar-brand" href="#">Kevin Toh Zheng Ying</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu">
+                  <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="Menu">
+                  <ul class="navbar-nav">
+                    <li class="nav-item">
+                      <a class="nav-link" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">About Me</a>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link" href="#">Projects</a>
+                    </li>    
+                  </ul>
+                </div>  
               </nav>
     <header>
         <h1>Welcome!</h1>
