--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <script src="Scripts/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/popper.min.js"></script>
 </head>
 <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-                <a class="navbar-brand" href="#">Kevin Toh Zheng Ying</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu">
-                  <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="Menu">
-                  <ul class="navbar-nav">
+            <a class="navbar-brand" href="#">Kevin Toh Zheng Ying</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="Menu">
+                <ul class="navbar-nav">
                     <li class="nav-item">
                       <a class="nav-link" href="index.html">Home</a>
                     </li>
@@ -22,9 +24,9 @@
                     <li class="nav-item">
                       <a class="nav-link" href="#">Projects</a>
                     </li>    
-                  </ul>
-                </div>  
-              </nav>
+                </ul>
+            </div>  
+        </nav>
     <header>
         <h1>Welcome!</h1>
         <h1>This is Kevin's website.</h1>
