--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-    <script src="Scripts/bootstrap.min.js"></script>
-    <script src="Scripts/jquery-3.3.1.min.js"></script>
-    <script src="Scripts/popper.min.js"></script>
+    <script src="https://ktzy0305.github.io/Scripts/bootstrap.min.js"></script>
+    <script src="https://ktzy0305.github.io/Scripts/jquery-3.3.1.min.js"></script>
+    <script src="https://ktzy0305.github.io/Scripts/popper.min.js"></script>
 </head>
 <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
