Added about me page
Added about me page

--- a/aboutme.html
+++ b/aboutme.html
@@ -28,8 +28,8 @@
             </div>  
         </nav>
     <header>
-        <h1>Welcome!</h1>
-        <h1>This is Kevin's website.</h1>
+        <h1>About me</h1>
     </header>
-</body>
+    <body>
+    </body>
 </html>
