added projects page

--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@
             </div>  
         </nav>
     <header>
-        <h1>About me</h1>
+        <h1>Projects</h1>
     </header>
     <body>
     </body>
