Added some test projects

--- a/projects.html
+++ b/projects.html
@@ -31,5 +31,13 @@
         <h1>Projects</h1>
     </header>
     <body>
+        <div class="row">
+            <div class="col-sm-6">
+                <a>Mr Map</a>
+            </div>
+            <div class="col-sm-6">
+                <a>Team Memo</a>
+            </div>
+        </div>
     </body>
 </html>
