--- a/aboutme.html
+++ b/aboutme.html
@@ -16,7 +16,7 @@
             <div class="collapse navbar-collapse" id="Menu">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="">Home</a>
+                      <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="aboutme.html">About Me</a>
@@ -29,6 +29,7 @@
         </nav>
     <header>
         <h1>About me</h1>
+        <p>Hi there, I am an 18 year old student living in Singapore. I am studying in Ngee Ann Polytechnic, School of Info-comm Technology for a Diploma in Information Technology. I specialize in Mobile Application Development and Secure Software Development</p>
     </header>
     <body>
     </body>
