Added background and css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src="Scripts/jquery-3.3.1.min.js"></script>
     <script src="Scripts/popper.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <link href="css/master.css" rel="stylesheet">
 </head>
 <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
@@ -28,8 +29,9 @@
             </div>  
         </nav>
     <header>
-        <h1>Welcome!</h1>
-        <h1>This is Kevin's website.</h1>
+        <div class="mainMessage">
+            <h1>Welcome!</h1>
+        </div>
     </header>
 </body>
 </html>
