--- a/aboutme.html
+++ b/aboutme.html
@@ -6,6 +6,7 @@
     <script src="Scripts/jquery-3.3.1.min.js"></script>
     <script src="Scripts/popper.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
+    <link href="css/master.css" rel="stylesheet">
 </head>
 <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
