Home Page V1 Done
Did the basics of the homepage

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <a class="navbar-brand" href="#">Kevin Toh Zheng Ying</a>
+            <a class="navbar-brand" href="index.html">Kevin Toh Zheng Ying</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,10 +28,14 @@
                 </ul>
             </div>  
         </nav>
-    <header>
+    <header class="mainPage">
         <div class="mainMessage">
             <h1>Welcome!</h1>
+            <a class="nodeco" href="aboutme.html"><button type="button" class="btn btn-primary btn-lg">Learn More</button></a>
         </div>
     </header>
+    <section>
+        
+    </section>
 </body>
 </html>
