Designed a little for the about me page.

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <a class="navbar-brand" href="index.html">Kevin Toh Zheng Ying</a>
+            <a class="navbar-brand" href="index.html"><strong>Kevin Toh Zheng Ying</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -29,9 +29,20 @@
             </div>  
         </nav>
     <header>
-        <h1>About me</h1>
-        <p>Hi there, I am an 18 year old student living in Singapore. I am studying in Ngee Ann Polytechnic, School of Info-comm Technology for a Diploma in Information Technology. I specialize in Mobile Application Development and Secure Software Development</p>
     </header>
-    <body>
-    </body>
+    <section id="aboutme">
+        <br/>
+            <center>
+            <div class="card w-50">
+                    <br/>
+                    <img class="card-img-top profile" src="Images/kevin.jpg">
+                    <div class="card-body">
+                      <h4 class="card-title">Kevin Toh Zheng Ying</h4>
+                      <h5 class="card-title">About Me</h5>
+                      <p class="card-text justifyText">I am an 18 year old student living in Singapore. I am studying in Ngee Ann Polytechnic, School of Info-comm Technology for a Diploma in Information Technology. I specialize in Mobile Application Development and Secure Software Development.</p>
+                      <a href="#" class="btn btn-primary">My Experience</a>
+                    </div>
+                  </div>
+                </center>
+    </section>
 </html>
