--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <a class="navbar-brand" href="index.html">Kevin Toh Zheng Ying</a>
+            <a class="navbar-brand" href="index.html"><strong>Kevin Toh Zheng Ying</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -30,8 +30,9 @@
         </nav>
     <header class="mainPage">
         <div class="mainMessage">
-            <h1>Welcome!</h1>
-            <a class="nodeco" href="aboutme.html"><button type="button" class="btn btn-primary btn-lg">Learn More</button></a>
+            <h1>Hi there, welcome to my personal portfolio!</h1>
+            <br/>
+            <a class="nodeco" href="aboutme.html"><button type="button" class="btn btn-primary btn-lg">Read More About Me</button></a>
         </div>
     </header>
     <section>
