Did css for mobile and online

--- a/aboutme.html
+++ b/aboutme.html
@@ -33,7 +33,7 @@
     <section id="aboutme">
         <br/>
             <center>
-            <div class="card w-50">
+            <div class="card aboutCard">
                     <br/>
                     <img class="card-img-top profile" src="Images/kevin.jpg">
                     <div class="card-body">
