Did a transitional page, home.html is now the main page

--- a/aboutme.html
+++ b/aboutme.html
@@ -10,14 +10,14 @@
 </head>
 <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <a class="navbar-brand" href="index.html"><strong>Kevin Toh Zheng Ying</strong></a>
+            <a class="navbar-brand" href="home.html"><strong>Kevin Toh Zheng Ying</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="Menu">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="index.html">Home</a>
+                      <a class="nav-link" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="aboutme.html">About Me</a>
@@ -32,17 +32,14 @@
     </header>
     <section id="aboutme">
         <br/>
-            <center>
             <div class="card aboutCard">
-                    <br/>
-                    <img class="card-img-top profile" src="Images/kevin.jpg">
                     <div class="card-body">
-                      <h4 class="card-title">Kevin Toh Zheng Ying</h4>
-                      <h5 class="card-title">About Me</h5>
-                      <p class="card-text justifyText">I am an 18 year old student living in Singapore. I am studying in Ngee Ann Polytechnic, School of Info-comm Technology for a Diploma in Information Technology. I specialize in Mobile Application Development and Secure Software Development.</p>
-                      <a href="#" class="btn btn-primary">My Experience</a>
+                      <h4 class="card-title">About Me</h4>
+                      <p class="card-text justifyText">
+                        I am a second-year student of the School of Info-comm Technology in Ngee Ann Polytechnic studying the course Information Technology (IT). I am specialising in Mobile Business Applications and Solutions Architect field and have taken the respective specialised elective modules namely Mobile applications Development and Secure Software Development. My interest in technology began when I first started learning how to use a computer when I was four years old. Back then, my parents taught me to use Microsoft Word 2003 to create a poster and I thought “Wow! That’s so cool!”. It amazes me how something can be easily done today, seem like something revolutionary in the past. Then came the indulgence of computer and console games. I had the Gameboy Advance (GBA), PSP and PS3 console during my primary school days. During those times I played countless of console and PC games that it would be exhaustive to list them down here. Till this day, gaming is part of my life and it wouldn’t run away anytime. In secondary school, I began my passion for the latest smartphones and technology and always sharing any special information that I could find online with my friends. It was also then I wanted to build my own desktop PC which I eventually did it after my O’ Levels. Going back to current times, I have grown to have a strong interest to be a software developer and had a fair share of obstacles along the way. “Defying the odds” is a phrase that motivates me to overcome the obstacles and to do better as a person as well as to unleash the creativity in me. I always believe that I have to “lick the stamp and send it” for every given opportunity. With that, being said, I have taken up software development projects that were given by my lecturers such as NP QuickBite an learning management system application that is currently available on both iOS and Android and also worked on some with my friends such as Mr Map and Team Memo. 
+                      </p>
+                      <a href="myexperience.html" class="btn btn-primary">My Experience</a>
                     </div>
                   </div>
-                </center>
     </section>
 </html>
