--- a/home.html
+++ b/home.html
@@ -29,9 +29,17 @@
             </div>  
         </nav>
     <header>
-        <h1>Projects</h1>
     </header>
-    <body>
-        <p>Hello</p>
-    </body>
+    <section id="aboutme">
+        <br/>
+            <div class="card aboutCard">
+                    <br/>
+                    <img class="card-img-top profile" src="Images/kevin.jpg">
+                    <div class="card-body">
+                      <h4 class="card-title">Kevin Toh Zheng Ying</h4>
+                      <p class="card-text justifyText">I am an 18 year old student living in Singapore. I am studying in Ngee Ann Polytechnic, School of Info-comm Technology for a Diploma in Information Technology. I specialize in Mobile Application Development and Secure Software Development.</p>
+                      <a href="aboutme.html" class="btn btn-primary">More About Me</a>
+                    </div>
+                  </div>
+    </section>
 </html>
