--- a/myexperience.html
+++ b/myexperience.html
@@ -29,9 +29,8 @@
             </div>  
         </nav>
     <header>
-        <h1>Projects</h1>
+        <h1>My Experience</h1>
     </header>
     <body>
-        <p>Hello</p>
     </body>
 </html>
