--- a/index.html
+++ b/index.html
@@ -1,42 +1,23 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="Scripts/jquery-3.3.1.min.js"></script>
-    <script src="Scripts/popper.min.js"></script>
-    <script src="bootstrap/js/bootstrap.min.js"></script>
-    <link href="css/master.css" rel="stylesheet">
-</head>
-<body>
-        <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <a class="navbar-brand" href="index.html"><strong>Kevin Toh Zheng Ying</strong></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="Menu">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="aboutme.html">About Me</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link" href="projects.html">Projects</a>
-                    </li>    
-                </ul>
-            </div>  
-        </nav>
-    <header class="mainPage">
-        <div class="mainMessage">
-            <h1>Hi there, welcome to my personal portfolio!</h1>
-            <br/>
-            <a class="nodeco" href="aboutme.html"><button type="button" class="btn btn-primary btn-lg">Read More About Me</button></a>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+        <script src="Scripts/jquery-3.3.1.min.js"></script>
+        <script src="Scripts/popper.min.js"></script>
+        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <link href="css/foldingcube.css" rel="stylesheet">
+        <script src="js/script.js"></script>
+    </head>
+    <body>
+        <div id="load">
+                Welcome to my E-Portfolio!
+                <div class="sk-folding-cube" id="cubeload">
+                    <div class="sk-cube1 sk-cube"></div>
+                    <div class="sk-cube2 sk-cube"></div>
+                    <div class="sk-cube4 sk-cube"></div>
+                    <div class="sk-cube3 sk-cube"></div>
+                </div>
         </div>
-    </header>
-    <section>
-        
-    </section>
-</body>
-</html>
+    </body>
+</html> 
