--- a/home.html
+++ b/home.html
@@ -37,7 +37,35 @@
                     <img class="card-img-top profile" src="Images/kevin.jpg">
                     <div class="card-body">
                       <h4 class="card-title">Kevin Toh Zheng Ying</h4>
-                      <p class="card-text justifyText">I am an 18 year old student living in Singapore. I am studying in Ngee Ann Polytechnic, School of Info-comm Technology for a Diploma in Information Technology. I specialize in Mobile Application Development and Secure Software Development.</p>
+                      <h5 class="card-title">Aspiring Mobile and Web Developer</h5>
+                      <p class="card-text justifyText">
+                          <u><b>Skillset</b></u>
+                          <br/>
+                          <b>Programming Languages</b>
+                          <br/>
+                          Python, C#, C++, Java, JavaScript
+                          <br/>
+                          <b>Markup Languages</b>
+                          <br/>
+                          HTML, XML
+                          <br/>
+                          <b>Styling Languages</b>
+                          <br/>
+                          CSS
+                          <br/>
+                          <br/>
+                          <u><b>Tools and Technologies used</b></u>
+                          <ul class="left">
+                              <li>Android Studio</li>
+                              <li>IDLE</li>
+                              <li>PyCharm</li>
+                              <li>Visual Studio 2017</li>
+                              <li>Visual Studio Code</li>
+                              <li>Github</li>
+                              <li>Bitbucket</li>
+                              <li>Azure Services</li>
+                          </ul>
+                        </p>
                       <a href="aboutme.html" class="btn btn-primary">More About Me</a>
                     </div>
                   </div>
