--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div id="load">
-                Welcome to my E-Portfolio!
+                Welcome to my <span>E-Portfolio!</span>
                 <div class="sk-folding-cube" id="cubeload">
                     <div class="sk-cube1 sk-cube"></div>
                     <div class="sk-cube2 sk-cube"></div>
