Major changes to the about page.

--- a/aboutme.html
+++ b/aboutme.html
@@ -3,12 +3,14 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Jua" rel="stylesheet">
     <script src="Scripts/jquery-3.3.1.min.js"></script>
     <script src="Scripts/popper.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
     <link href="css/aboutme.css" rel="stylesheet">
 </head>
 <body>
+    <header>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
             <a class="navbar-brand" href="home.html"><strong>Kevin Toh Zheng Ying</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu">
@@ -17,47 +19,79 @@
             <div class="collapse navbar-collapse" id="Menu">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="home.html">Home</a>
-                    </li>
-                    <li class="nav-item">
                       <a class="nav-link" href="aboutme.html">About Me</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="projects.html">Projects</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact Me</a>
                     </li>    
                 </ul>
             </div>  
         </nav>
-    <header>
     </header>
-    <section id="aboutme">
-        <div class="aboutMe">
-            <div class="aboutContent contentStandard">
-                <img class="profile" src="Images/kevin.jpg"/>
-                <br/>
-                <h4 class="justifyText">Hi, I'm Kevin. Nice to meet you.</h4>
-                <p class="justifyText">Since beginning my journey as a software developer 2 years ago, I've worked on various projects, built on my portfolio, and collaborated with friends in hackathons to create wonderful solutions for our digital world.</p>
+    <section id="aboutSection">
+        <div class="container-fluid">
+            <div class="row welcome contentStandard">
+                <div class="col-sm-12">
+                    <h1>Welcome to my E-Portfolio!</h1>
+                </div>
             </div>
-        </div>
-        <div class="skillset contentStandard">
-            <img class="img-fluid logoStandard" src="Images/Code.png"/>
-            <h4><b>Skillset</b></h4>
-            <b>Programming Languages</b>
-            <br/>
-            Python, C#, C++, Java, JavaScript
-            <br/>
-            <b>Markup Languages</b>
-            <br/>
-            HTML, XML
-            <br/>
-            <b>Styling Languages</b>
-            <br/>
-            CSS
-        </div>
-        <div class="moreAboutMe contentStandard">
-            <h4 class="card-title">More About Me</h4>
-            <p class="card-text justifyText">I am a second-year student of the School of Info-comm Technology in Ngee Ann Polytechnic studying the course Information Technology (IT). I am specialising in Mobile Business Applications and Solutions Architect field and have taken the respective specialised elective modules namely Mobile applications Development and Secure Software Development. My interest in technology began when I first started learning how to use a computer when I was four years old. Back then, my parents taught me to use Microsoft Word 2003 to create a poster and I thought “Wow! That’s so cool!”. It amazes me how something can be easily done today, seem like something revolutionary in the past. Then came the indulgence of computer and console games. I had the Gameboy Advance (GBA), PSP and PS3 console during my primary school days. During those times I played countless of console and PC games that it would be exhaustive to list them down here. Till this day, gaming is part of my life and it wouldn’t run away anytime. In secondary school, I began my passion for the latest smartphones and technology and always sharing any special information that I could find online with my friends. It was also then I wanted to build my own desktop PC which I eventually did it after my O’ Levels. Going back to current times, I have grown to have a strong interest to be a software developer and had a fair share of obstacles along the way. “Defying the odds” is a phrase that motivates me to overcome the obstacles and to do better as a person as well as to unleash the creativity in me. I always believe that I have to “lick the stamp and send it” for every given opportunity. With that, being said, I have taken up software development projects that were given by my lecturers such as NP QuickBite an learning management system application that is currently available on both iOS and Android and also worked on some with my friends such as Mr Map and Team Memo. </p>
-            <a href="myexperience.html" class="btn btn-primary">My Experience</a>
+            <div class="row aboutMe contentStandard">
+                <div class="col-sm-12 aboutContent">
+                    <img class="profile" src="Images/kevin.jpg"/>
+                    <br/>
+                    <h4 class="justifyText">Hi, I'm Kevin. Nice to meet you.</h4>
+                    <p class="justifyText">I am an aspiring mobile and web developer and I am currently studying in my second year in Ngee Ann Polytechnic. I've developed quite a few apps, worked on various software development projects and partipcated in hackathons with friends to create wonderful solutions for our digital world.</p>
+                    <p id="btnCenter"><a href="#moreAboutMe" class="btn btn-primary">More About Me</a></p>
+                </div>
+            </div>
+            <div class="row skillTitle">
+                <div class="col-sm-12">
+                    <h4>My Skillset</h4>
+                </div>
+            </div>
+            <div class="row skillset">
+                <div class="col-sm-4 webDev contentAlign">
+                    <img class="img-fluid logoStandard" src="Images/Web.png"/>
+                    <h5><b>Web Development</b></h5>
+                    <b>Back End / Server Side Languages</b>
+                    <br/>
+                    C# (ASP.NET), JavaScript
+                    <br/>
+                    <b>Web Design (Front End)</b>
+                    <br/>
+                    HTML, CSS, Bootstrap
+                </div>
+                <div class="col-sm-4 mobileDev contentAlign">
+                    <img class="img-fluid logoStandard" src="Images/Mobile.png"/>
+                    <h5><b>Mobile Apps Development</b></h5>
+                    <b>Android</b>
+                    <br/>
+                    Java, Kotlin
+                    <br/>
+                    <b>App Design</b>
+                    <br/>
+                    XML
+                    <b>IOS</b>
+                    <br/>
+                    Swift
+                </div>
+                <div class="col-sm-4 softwareDev contentAlign">
+                        <img class="img-fluid logoStandard" src="Images/Code.png"/>
+                    <h5><b>Coding</b></h5>
+                    <b>Programming Languages</b>
+                    <br/>
+                    Python, C#, C++, Java, Kotlin, Swift
+                </div>
+            </div>
+            <div class="row moreAboutMe contentStandard" id="moreAboutMe">
+                <div class="col-sm-12">
+                    <h4>Get to know more about me</h4>
+                    <p class="card-text justifyText">I am a second-year student of the School of Info-comm Technology in Ngee Ann Polytechnic studying the course Information Technology (IT). I am specialising in Mobile Business Applications and Solutions Architect field and have taken the respective specialised elective modules namely Mobile applications Development and Secure Software Development. My interest in technology began when I first started learning how to use a computer when I was four years old. Back then, my parents taught me to use Microsoft Word 2003 to create a poster and I thought “Wow! That’s so cool!”. It amazes me how something can be easily done today, seem like something revolutionary in the past. Then came the indulgence of computer and console games. I had the Gameboy Advance (GBA), PSP and PS3 console during my primary school days. During those times I played countless of console and PC games that it would be exhaustive to list them down here. Till this day, gaming is part of my life and it wouldn’t run away anytime. In secondary school, I began my passion for the latest smartphones and technology and always sharing any special information that I could find online with my friends. It was also then I wanted to build my own desktop PC which I eventually did it after my O’ Levels. Going back to current times, I have grown to have a strong interest to be a software developer and had a fair share of obstacles along the way. “Defying the odds” is a phrase that motivates me to overcome the obstacles and to do better as a person as well as to unleash the creativity in me. I always believe that I have to “lick the stamp and send it” for every given opportunity. With that, being said, I have taken up software development projects that were given by my lecturers such as NP QuickBite an learning management system application that is currently available on both iOS and Android and also worked on some with my friends such as Mr Map and Team Memo.</p>
+                </div>
+            </div>
         </div>
     </section>
 </html>
