--- a/contact.html
+++ b/contact.html
@@ -17,19 +17,21 @@
             <div class="collapse navbar-collapse" id="Menu">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="home.html">Home</a>
+                        <a class="nav-link" href="aboutme.html">About Me</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="aboutme.html">About Me</a>
+                        <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="projects.html">Projects</a>
-                    </li>    
+                        <a class="nav-link" href="contact.html">Contact Me</a>
+                    </li>
                 </ul>
             </div>  
         </nav>
     <header>
-        <h1>My Experience</h1>
+        <h1>LinkedIn</h1>
+        <h1>Instagram</h1>
+        <h1>Email</h1>
     </header>
     <body>
     </body>
