--- a/projects.html
+++ b/projects.html
@@ -17,13 +17,13 @@
             <div class="collapse navbar-collapse" id="Menu">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="home.html">Home</a>
+                        <a class="nav-link" href="aboutme.html">About Me</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="aboutme.html">About Me</a>
+                        <a class="nav-link" href="projects.html">Projects</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="projects.html">Projects</a>
+                        <a class="nav-link" href="contact.html">Contact Me</a>
                     </li>    
                 </ul>
             </div>  
