removed padding on the welcome h1 tag

--- a/aboutme.html
+++ b/aboutme.html
@@ -33,7 +33,7 @@
     </header>
     <section id="aboutSection">
         <div class="container-fluid">
-            <div class="row welcome contentStandard">
+            <div class="row welcome">
                 <div class="col-sm-12">
                     <h1>Welcome to my E-Portfolio!</h1>
                 </div>
