Organised image folders and starting work on the projects page
Categorised images under icons, backgrounds and projects

--- a/aboutme.html
+++ b/aboutme.html
@@ -40,11 +40,11 @@
             </div>
             <div class="row aboutMe contentStandard">
                 <div class="col-sm-12 aboutContent">
-                    <img class="profile" src="Images/kevin.jpg"/>
+                    <img class="profile" src="Images/Profile/kevin.jpg"/>
                     <br/>
                     <h4 class="justifyText">Hi, I'm Kevin. Nice to meet you.</h4>
                     <p class="justifyText">I am an aspiring mobile and web developer and I am currently studying in my second year in Ngee Ann Polytechnic. I've developed quite a few apps, worked on various software development projects and partipcated in hackathons with friends to create wonderful solutions for our digital world.</p>
-                    <p id="btnCenter"><a href="#moreAboutMe" class="btn btn-primary">More About Me</a></p>
+                    <p id="btnCenter"><a onclick="document.getElementById('moreAboutMe').scrollIntoView();" class="btn btn-primary">More About Me</a></p>
                 </div>
             </div>
             <div class="row skillTitle">
@@ -54,7 +54,7 @@
             </div>
             <div class="row skillset">
                 <div class="col-sm-4 webDev contentAlign">
-                    <img class="img-fluid logoStandard" src="Images/Web.png"/>
+                    <img class="img-fluid logoStandard" src="Images/Icons/Web.png"/>
                     <h5><b>Web Development</b></h5>
                     <b>Back End / Server Side Languages</b>
                     <br/>
@@ -65,7 +65,7 @@
                     HTML, CSS, Bootstrap
                 </div>
                 <div class="col-sm-4 mobileDev contentAlign">
-                    <img class="img-fluid logoStandard" src="Images/Mobile.png"/>
+                    <img class="img-fluid logoStandard" src="Images/Icons/Mobile.png"/>
                     <h5><b>Mobile Apps Development</b></h5>
                     <b>Android</b>
                     <br/>
@@ -80,7 +80,7 @@
                     Swift
                 </div>
                 <div class="col-sm-4 softwareDev contentAlign">
-                        <img class="img-fluid logoStandard" src="Images/Code.png"/>
+                        <img class="img-fluid logoStandard" src="Images/Icons/Code.png"/>
                     <h5><b>Coding</b></h5>
                     <b>Programming Languages</b>
                     <br/>
