--- a/projects.html
+++ b/projects.html
@@ -6,9 +6,10 @@
     <script src="Scripts/jquery-3.3.1.min.js"></script>
     <script src="Scripts/popper.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
-    <link href="css/master.css" rel="stylesheet">
+    <link href="css/projects.css" rel="stylesheet">
 </head>
 <body>
+    <header>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
             <a class="navbar-brand" href="home.html"><strong>Kevin Toh Zheng Ying</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu">
@@ -28,10 +29,25 @@
                 </ul>
             </div>  
         </nav>
-    <header>
-        <h1>Projects</h1>
     </header>
     <body>
-        <p>Hello</p>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-sm-12 projectTitle">
+                    <h3>Projects</h3>
+                    <h6>Software that I've worked on</h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12 projects">
+                    <div class="card">
+                        <h5 class="card-title">Mr Map</h5>
+                        <p class="card-body">
+                            Mr Map is an interactive map.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
