--- a/projects.html
+++ b/projects.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <a class="navbar-brand" href="home.html"><strong>Kevin Toh Zheng Ying</strong></a>
+            <a class="navbar-brand" href="aboutme.html"><strong>Kevin Toh Zheng Ying</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -40,7 +40,7 @@
             </div>
             <div class="row">
                 <div class="col-sm-12 projects">
-                    <div class="card">
+                    <div class="card MrMap">
                         <h5 class="card-title">Mr Map</h5>
                         <p class="card-body">
                             Mr Map is an interactive map.
