--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
         <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-            <a class="navbar-brand" href="home.html"><strong>Kevin Toh Zheng Ying</strong></a>
+            <a class="navbar-brand" href="aboutme.html"><strong>Kevin Toh Zheng Ying</strong></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Menu">
                 <span class="navbar-toggler-icon"></span>
             </button>
