Working on project grid

--- a/projects.html
+++ b/projects.html
@@ -32,19 +32,22 @@
     </header>
     <body>
         <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-12 projectTitle">
-                    <h3>Projects</h3>
-                    <h6>Software that I've worked on</h6>
+            <div class="row projects">
+                <div class="col-sm-12">
+                    <br/>
+                    <h3>My Recent Work</h3>
+                    <p>Here are some of the projects I have worked on lately.</p>  
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-12 projects">
-                    <div class="card MrMap">
-                        <h5 class="card-title">Mr Map</h5>
-                        <p class="card-body">
-                            Mr Map is an interactive map.
-                        </p>
+                <div class="col-sm-12">
+                    <div class="imageGrid">
+                        <figure class="image">
+                            <img class="projectThumbnail" src="Images/Projects/Mr_Map.png"/>
+                            <figcaption>
+                                
+                            </figcaption>
+                        </figure>
                     </div>
                 </div>
             </div>
