Added some projects

--- a/projects.html
+++ b/projects.html
@@ -32,24 +32,56 @@
     </header>
     <body>
         <div class="container-fluid">
-            <div class="row projects">
+            <div class="row projects projectTitle">
                 <div class="col-sm-12">
-                    <br/>
                     <h3>My Recent Work</h3>
                     <p>Here are some of the projects I have worked on lately.</p>  
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="imageGrid">
-                        <figure class="image">
-                            <img class="projectThumbnail" src="Images/Projects/Mr_Map.png"/>
-                            <figcaption>
-                                
-                            </figcaption>
-                        </figure>
-                    </div>
+            <div class="row projects">
+                <div class="col-sm-4 placeholder">
+                    <figure>
+                        <img src="Images/Apps/MrMap.png" class="image img-fluid"/>
+                        <br/>
+                        <h4>Mr Map</h4>
+                        <p class="justifyText">
+                            Mr Map is a map based food recommendation app that was created as a portfolio booster project. It was never published onto google play despite it's first iteration being completed as it was still very basic and not what I intended it to be. Currently the app is being redone and improved to achieve the original intended goal.
+                        </p>
+                        <p class="buttons">
+                            <a href="#" class="btn btn-info">More Info</a>
+                            <a href="https://github.com/ktzy0305/Mr-Map-2.0" class="btn btn-warning">Work In Progress</a>
+                        </p>
+                    </figure>
                 </div>
+                <div class="col-sm-4 placeholder">
+                    <figure>
+                        <img src="Images/Apps/NPQuickbite.jpg" class="image img-fluid"/>
+                        <br/>
+                        <h4>NPQuickbite</h4>
+                        <p class="justifyText">
+                            NPQuickbite is a trial learning managment system app for Ngee Ann Polytechnic where anyone can learn anything from the wide plethora of courses in the course catalog. I was fortunate to have the opportunity to work with my lecturers on the back end of this application and some bug fixing.
+                        </p>
+                        <p class="buttons">
+                            <a href="#" class="btn btn-info">More Info</a>
+                            <a href="https://itunes.apple.com/us/app/npquickbite/id1336767450?mt=8" class="btn btn-light">App Store</a>
+                            <a href="https://play.google.com/store/apps/details?id=sg.edu.np.charles.quickbiteandroid&hl=en_SG" class="btn btn-success">Google Play</a>
+                        </p>
+                    </figure>
+                </div>
+                <div class="col-sm-4 placeholder">
+                    <figure>
+                        <img src="Images/Apps/TeamMemo.png" class="image img-fluid"/>
+                        <br/>
+                        <h4>Team Memo</h4>
+                        <p class="justifyText">
+                            Team Memo is a personal time and task management app that allows the user to assign a time limit to a task and the amount of rounds. This app was built as part an school assignment for the Mobile Applications Development Module. 
+                        </p>
+                        <p class="buttons">
+                            <a href="#" class="btn btn-info">More Info</a>
+                            <a href="https://play.google.com/store/apps/details?id=sg.edu.np.s10179142connect.memotime" class="btn btn-success">Google Play</a>
+                        </p>
+                    </figure>
+                </div>    
             </div>
         </div>
     </body>
